fix: dark mode nav list subheading color

--- a/src/_sass/imports/minimal-mistakes/_navigation.scss
+++ b/src/_sass/imports/minimal-mistakes/_navigation.scss
@@ -485,6 +485,7 @@
   margin: 0.5rem 0;
   padding: 0.25rem 0;
   padding-left: 6px;
+  color: var(--text-color);
   font-family: var(--ui-font-family);
   font-size: $type-size-5;
   line-height: 1;
@@ -492,14 +493,6 @@
   font-weight: bold;
   text-transform: uppercase;
 }
-
-// .nav__sub-title + ul {
-//   display: none !important;
-// }
-
-// .nav__sub-title.active + ul {
-//   display: block;
-// }
 
 
 
@@ -510,8 +503,6 @@ button.nav__sub-title_collapse  {
   font-family: var(--ui-font-family);
   border-radius: 5px;
   font-size: 20px;
-  cursor: pointer;
-  user-select: none;
   line-height: .7;
 
   height: 1.5em;
@@ -519,6 +510,10 @@ button.nav__sub-title_collapse  {
   display: flex;
   align-items: center;
   justify-content: space-around;
+
+  cursor: pointer;
+  user-select: none;
+  color: var(--text-color);
 }
 
 span.nav__sub-title_expand ,
@@ -529,6 +524,7 @@ span.nav__sub-title_collapse {
   border-radius: 5px;
   font-size: 20px;
   cursor: pointer;
+  color: var(--text-color);
   user-select: none;
   line-height: .7;
 
