--- a/src/_sass/wide.scss
+++ b/src/_sass/wide.scss
@@ -194,7 +194,7 @@ section.fullwidth h2 {
       padding: 0;
       margin-bottom: 0.5em;
       letter-spacing: -0.2px;
-      opacity: .5;
+      opacity: .7;
   }
 }
 
